--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "deploy:msg": "powershell -ExecutionPolicy Bypass -File ./auto-deploy.ps1 -message"
   },
   "dependencies": {
-    "next": "16.0.8",
+    "next": "^16.1.1",
     "nodemailer": "^7.0.11",
     "react": "19.2.1",
     "react-dom": "19.2.1",
